java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting/DotBeforeDecl.java
public class A_DBD {
  {
    int field = 0;
    field.
    <error descr="Cannot resolve symbol 'String'">String</error> s = null;
  }
}
